Fonts, Color updates, toying with layout, updating libraries

--- a/minister.libraries.yml
+++ b/minister.libraries.yml
@@ -3,6 +3,8 @@ global-styling:
   css:
     theme:
       assets/css/styles.css: {}
+      //maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css: {type: external}
+      //fonts.googleapis.com/css?family=Merriweather: {type: external}
   dependencies:
     - core/jquery
     - core/drupal
