--- a/minister.libraries.yml
+++ b/minister.libraries.yml
@@ -4,7 +4,8 @@ global-styling:
     theme:
       assets/css/styles.css: {}
       //maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css: {type: external}
-      //fonts.googleapis.com/css?family=Merriweather: {type: external}
+      //fonts.googleapis.com/css?family=Open+Sans:400,700|PT+Serif: {type: external}
+      
   dependencies:
     - core/jquery
     - core/drupal
