Several theme updates and changes, pulling in notes from Seven

--- a/minister.libraries.yml
+++ b/minister.libraries.yml
@@ -9,3 +9,14 @@ global-styling:
   dependencies:
     - core/jquery
     - core/drupal
+
+drupal.nav-tabs:
+  version: VERSION
+  js:
+    js/nav-tabs.js: {}
+  dependencies:
+    - core/matchmedia
+    - core/jquery
+    - core/drupal
+    - core/jquery.once
+    - core/drupal.debounce
