--- a/minister.info.yml
+++ b/minister.info.yml
@@ -6,7 +6,14 @@ core: 8.x
 libraries:
   - minister/global-styling
 regions:
-  header: Header
+  header: 'Header'
+  pre_content: 'Pre-content'
+  breadcrumb: Breadcrumb
+  highlighted: Highlighted
+  help: Help
   content: Content
-  sidebar_first: 'Sidebar first'
-  footer: Footer
+  page_top: 'Page top'
+  page_bottom: 'Page bottom'
+  sidebar_first: 'First sidebar'
+regions_hidden:
+  - sidebar_first
